--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -8,7 +8,8 @@
              d:DesignHeight="200"
              d:DesignWidth="1000"
              IsTabStop="False"
-             UseSystemFocusVisuals="False">
+             UseSystemFocusVisuals="False"
+             AutomationProperties.LabeledBy="{x:Bind tbTitle}">
     <Grid Background="{x:Bind Background, Mode=OneWay}"
           BorderBrush="{x:Bind BorderBrush, Mode=OneWay}"
           BorderThickness="{x:Bind BorderThickness, Mode=OneWay}"
@@ -40,7 +41,8 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <TextBlock Text="{x:Bind Gallery, Converter={StaticResource GalleryToTitleStringConverter}, Mode=OneWay}"
+            <TextBlock x:Name="tbTitle"
+                       Text="{x:Bind Gallery, Converter={StaticResource GalleryToTitleStringConverter}, Mode=OneWay}"
                        Style="{StaticResource SubtitleTextBlockStyle}"
                        TextWrapping="WrapWholeWords"
                        MaxLines="3"
@@ -59,12 +61,12 @@
             <TextBlock Text="{x:Bind Gallery.RecordCount, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='Controls/GalleryViewer/RecordCountFormatString'}"
                        Grid.Row="4" />
             <StackPanel Orientation="Horizontal"
-                       Grid.Row="3">
+                        Grid.Row="3">
                 <local:FavoriteCategoryPresenter Category="{x:Bind Gallery.FavoriteCategory, Mode=OneWay}" />
                 <TextBlock Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
-                       FontFamily="Segoe MDL2 Assets"
-                       VerticalAlignment="Center" />
-                
+                           FontFamily="Segoe MDL2 Assets"
+                           VerticalAlignment="Center" />
+
             </StackPanel>
             <TextBlock Text="{x:Bind Gallery.Uploader, Mode=OneWay}"
                        Grid.Row="4"
