--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -485,6 +485,7 @@
                 <ControlTemplate TargetType="controls:FavoriteCategoryPresenter">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock x:Name="Icon"
+                                   x:DeferLoadStrategy="Lazy"
                                    Text="&#x2BC1;" />
                         <TextBlock x:Name="Label" 
                                    x:DeferLoadStrategy="Lazy"
