--- a/ExViewer/Strings/Strings.tt
+++ b/ExViewer/Strings/Strings.tt
@@ -6,12 +6,12 @@
 <#@ assembly name="System.Runtime.Serialization" #>
 <#@ assembly name="EnvDTE" #>
 <#@ import namespace="System" #>
+<#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="System.IO" #>
 <#@ import namespace="System.Xml" #>
-<#@ import namespace="System.Collections.Generic" #>
 <#@ import namespace="System.Runtime.Serialization.Json" #>
-<#@ import namespace="System.Web" #>
 <#@ import namespace="System.Linq" #>
+<#@ import namespace="System.Web" #>
 <#@ output extension=".tt.cs" #>
 <#
     Init();
@@ -34,10 +34,10 @@
     // Properties.InterfacesNamespace = "MyNamespace.MyNamespace_ResourceInfo";
 
     // 生成辅助类的修饰符
-    // Properties.Modifier = "public";
+    Properties.Modifier = "internal";
 
     // 是否为默认工程，决定是否需要显式定义资源路径。
-    // Properties.IsDefaultProject = true;
+    Properties.IsDefaultProject = true;
 
     // 是否调试生成的代码。
     // Properties.DebugGeneratedCode = false;
@@ -50,7 +50,7 @@
 <#+
 
     public string ProductName => "Resource Generator";
-    public string ProductVersion => "2.0.1.0";
+    public string ProductVersion => "2.0.2.0";
 
 #>
 <#+
@@ -333,7 +333,7 @@
     {
         if(!Helper.Keywords.Contains(node.Name) && node.Name != node.PName)
         {
-            WriteLine($"#warning Resource has been renamed. ResourceName: \"{node.Name}\", PropertyName: \"{node.PName}\"");
+            WriteLine($"#warning Resource has been renamed. ResourceName: \"{Helper.AsLiteral(node.Name)}\", PropertyName: \"{Helper.AsLiteral(node.PName)}\"");
         }
     }
 
@@ -481,8 +481,8 @@
     public void WriteResources(IList<ResourceRootNode> tree)
     {
         var indent = 1;
-        var loaderName = Helper.GetRandomName("__loader__");
-        var cacheName = Helper.GetRandomName("__cache__");
+        var loaderName = Helper.GetRandomName("__loader");
+        var cacheName = Helper.GetRandomName("__cache");
         WriteLine($"namespace {Properties.LocalizedStringsNamespace}");
         WriteLine($"{{");
         //private global::System.Collections.Generic.IDictionary<string, string> _cache__TWL1Vqwp;
@@ -490,14 +490,10 @@
         WriteAttributsForClass(indent);
         WriteLine(indent, $"{Properties.Modifier}static class {Properties.LocalizedStringsClassName}");
         WriteLine(indent, $"{{");
-        WriteLine(indent, $"    private static global::System.Collections.Generic.IDictionary<string, string> {cacheName};");
-        WriteLine(indent, $"    private static global::Windows.ApplicationModel.Resources.ResourceLoader {loaderName};");
-        WriteLine();
-        WriteLine(indent, $"    static {Properties.LocalizedStringsClassName}()");
-        WriteLine(indent, $"    {{");
-        WriteLine(indent, $"        {Properties.LocalizedStringsFullName}.{cacheName} = {Properties.CacheActivator};");
-        WriteLine(indent, $"        {Properties.LocalizedStringsFullName}.{loaderName} = global::Windows.ApplicationModel.Resources.ResourceLoader.GetForViewIndependentUse();");
-        WriteLine(indent, $"    }}");
+        WriteLine(indent, $"    private static readonly global::System.Collections.Generic.IDictionary<string, string> {cacheName}");
+        WriteLine(indent, $"        = {Properties.CacheActivator};");
+        WriteLine(indent, $"    private static readonly global::Windows.ApplicationModel.Resources.ResourceLoader {loaderName}");
+        WriteLine(indent, $"        = global::Windows.ApplicationModel.Resources.ResourceLoader.GetForViewIndependentUse();");
         WriteLine();
         WriteLine(indent, $"    public static string GetValue(string resourceKey)");
         WriteLine(indent, $"    {{");
@@ -718,7 +714,27 @@
             foreach(var item in value)
             {
                 var chType = char.GetUnicodeCategory(item);
-                if(chType == System.Globalization.UnicodeCategory.Control || chType == System.Globalization.UnicodeCategory.OtherPunctuation)
+                if(item == '"')
+                    sb.Append(@"\""");
+                else if(item == '\\')
+                    sb.Append(@"\\");
+                else if(item == '\0')
+                    sb.Append(@"\0");
+                else if(item == '\a')
+                    sb.Append(@"\a");
+                else if(item == '\b')
+                    sb.Append(@"\b");
+                else if(item == '\f')
+                    sb.Append(@"\f");
+                else if(item == '\r')
+                    sb.Append(@"\r");
+                else if(item == '\n')
+                    sb.Append(@"\n");
+                else if(item == '\t')
+                    sb.Append(@"\t");
+                else if(item == '\v')
+                    sb.Append(@"\v");
+                else if(chType == System.Globalization.UnicodeCategory.Control)
                 {
                     sb.Append(@"\u");
                     sb.Append(((ushort)item).ToString("X4"));
@@ -777,7 +793,7 @@
             var buf = new byte[6];
             ran.NextBytes(buf);
             var r = Convert.ToBase64String(buf);
-            return $"{head}__{r.Replace("+", "").Replace("/", "")}";
+            return $"{head}__{r.Replace("+", "_").Replace("/", "_")}";
         }
     }
 
